--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cobe": "^0.6.4",
     "gsap": "^3.13.0",
     "lucide-vue-next": "^0.525.0",
     "vue": "^3.5.17"
